compiler/tools/fpp-check/test/event/duplicate_id_implicit.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/duplicate_id_implicit.fpp: 7.3
  event E3 severity activity low format ""
  ^
error: duplicate identifier value (17 dec, 11 hex)
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/event/duplicate_id_implicit.fpp: 3.3
  event E1 severity activity low id 0x11 format ""
  ^
